# home-display-terminal-pi

./: .gitignore  README.md
docs/: raspberry-pi-ssh-key.md
iced-demo/: Cargo.toml
iced-demo/data/: weather-fixture.json
iced-demo/src/: config.rs  constants.rs  data.rs  main.rs  model.rs  style.rs  util.rs  views.rs  weather.rs
native/: gtk_demo.py
public/: app-config.js  app.js  debug.html  debug.js  device-info.js  index.html  keyboard-debug.html  keyboard-debug.js  styles.css  weather-theme.css
public/app/: calendar.js  caltrain.js  clock.js  constants.js  navigation.js  settings.js  toast.js  utils.js  weather.js
public/data/: caltrain-commute.csv
scripts/: build-caltrain-commute.py  deploy-restart.sh  deploy.sh
scripts/iced/: deploy-iced-demo.sh  start-iced-demo.sh  stop-web-kiosk.sh
scripts/kiosk/: family-display-kiosk.desktop  start-kiosk.sh
scripts/native/: start-gtk-demo.sh
scripts/systemd/: family-display.service  gpio_server.py  start-server.sh
