[package]
name = "family-display-iced-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10"
csv = "1.3"
get_if_addrs = "0.5"
iced = { version = "0.14.0", features = ["canvas", "svg", "tokio"] }
json5 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
